spacing title fix TEST

--- a/styles.css
+++ b/styles.css
@@ -128,19 +128,19 @@ h1 {
 }
 
 .speaker.active:nth-child(2) {
-    width:81.5vw!important;
+    width:82.5vw!important;
 }
 .speaker.active:nth-child(3) {
-    width:81.5vw!important;
+    width:82.5vw!important;
 }
 .speaker.active:nth-child(4) {
-    width:81.5vw!important;
+    width:82.5vw!important;
 }
 .speaker.active:nth-child(5) {
-    width:81.5vw!important;
+    width:82.5vw!important;
 }
 .container.active .speaker:nth-child(1) {
-    width:5vw
+    width:6vw
    }
 
 .speaker img {
